<resources>
    <string name="app_name">Test</string>
    <string name="calendar">Calendar</string>
    <string name="webbrowser">Web Browser</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="notifications">Notification</string>
    <string name="test" translatable="false">TEST</string>
    <string name="channel_name">Test</string>
    <string name="channel_description">Description</string>
    <string name="notif_title">Notification Title</string>
    <string name="notif_desc">Notification Description</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="fragments">Fragments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="lists">Lists</string>
    <string name="database">Databases</string>
    <string name="storage">Storage</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="view_edit">View/Edit</string>
    <string name="add">Add</string>
    <string name="cache">Cache</string>
    <string name="ext_storage">External Storage</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="delete">Delete</string>
    <string name="file_internal">internal</string>
    <string name="file_cache" translatable="false">cache</string>
    <string name="file_ext">external</string>
    <string name="images">Images</string>
    <string name="multimedia" translatable="false">Multimedia</string>
    <string name="runt_design">Runtime Design</string>
    <string name="hint_word">Word...</string>
    <string name="save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty</string>
    <string name="new_entry">New</string>
    <string name="video">Videos</string>
    <string name="audio">Audios</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="remote_image_url" translatable="false">http://xyz.rs1.es/public/ejemplos/atardecer.jpg</string>
</resources>
